fix wrap padding in navbar

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -38,7 +38,7 @@ body {
 
 .navbar-inner {
   .border-radius(0);
-  .container-fluid {
+  .wrap {
     padding:0;
   }
 }
